# SHA-256

./: .gitignore  CMakeLists.txt  README.md
documentation/: Relazione.tex
include/: common.h
src/: client.c  server.c  sha256_utils.c
